--- a/src/app/articles-list/articles-list.component.html
+++ b/src/app/articles-list/articles-list.component.html
@@ -1,6 +1,6 @@
 <h1>Articles List:</h1>
 <div *ngFor="let article of articles" class='article'>
-  <h2><a href='https://pubmed.ncbi.nlm.nih.gov/{{article.id}}'>{{ article.title }}</a></h2>
+  <h2>{{ article.title }} <a href='https://pubmed.ncbi.nlm.nih.gov/{{article.id}}'>&lt;link&gt;</a></h2>
   <div>
     <h3>Abstract</h3>
     <app-abstract [sections]="article.abstract"></app-abstract>
