--- a/src/app/articles-list/articles-list.component.css
+++ b/src/app/articles-list/articles-list.component.css
@@ -1,3 +1,10 @@
 .article {
-  border: black solid thin;
+  padding-bottom: 1rem;
+}
+
+.abstract {
+  border: solid thin black;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
 }
