--- a/src/app/articles-list/articles-list.component.html
+++ b/src/app/articles-list/articles-list.component.html
@@ -2,12 +2,12 @@
 <div *ngFor="let article of articlesByDate()">
   <div class='article'>
     <div class='article-headline'>
-      <a href='https://pubmed.ncbi.nlm.nih.gov/{{article.data.id}}'>
-        <mat-icon>link</mat-icon>
-      </a>
       <span class='article-title' (click)='toggleAbstract(article)'>
         {{ article.data.title }}
       </span>
+      <a class='article-link' href='https://pubmed.ncbi.nlm.nih.gov/{{article.data.id}}'>
+        <mat-icon>link</mat-icon>
+      </a>
     </div>
     <div class='article-date'>
       Last updated: {{ article.data.date | date }}
