works towards being able to test ArticlesService

--- a/src/app/articles-list/articles-list.component.html
+++ b/src/app/articles-list/articles-list.component.html
@@ -1,4 +1,4 @@
-<h1>Articles List:</h1>
+<h1 class='app-headline'>Article List:</h1>
 <div *ngFor="let article of articlesByDate()">
   <div class='article'>
     <div class='article-headline'>
